fix: collapse in housing page

--- a/src/pages/housing/housing.scss
+++ b/src/pages/housing/housing.scss
@@ -166,7 +166,7 @@
         width: 1240px;
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         justify-content: space-between;
         gap: 100px;
         
